[package]
name = "blockPractice"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio-native-tls"] }
tokio = { version = "1.49.0", features = ["full"] }
