[package]
name = "blockPractice"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
chrono = { version = "0.4.42", features = ["serde"] }
dotenvy = "0.15.7"
hex = "0.4.3"
k256 = { version = "0.13.4", features = ["ecdsa"] }
once_cell = "1.21.3"
postcard = { version = "1.1.3", features = ["alloc"] }
rand = "0.9.2"
reqwest = "0.13.1"
rocksdb = "0.24.0"
serde = { version = "1.0.228", features = ["derive"] }
serde-big-array = "0.5.1"
serde_json = "1.0.149"
serde_with = "3.16.1"
serde_yaml = "0.9.34"
sha3 = "0.10.8"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors"] }


[[bin]]
name = "node"
path = "src/main.rs"


[[bin]]
name = "db-inspector"
path = "src/tools/inspect_db.rs"
